fixed the toolbar overlap issue in responsive

--- a/admin/css/commenting-block-admin.css
+++ b/admin/css/commenting-block-admin.css
@@ -78,7 +78,7 @@ span.user-name{font-weight:700}
 .comment-header .buttons-holder .buttons-wrapper button{width:100%;cursor:pointer;display:block;background:#fff;margin-bottom:5px;color:#000;text-align:left;border-radius:0;padding:5px 10px;font-weight:normal;border:0;letter-spacing:0.5px;outline:none}
 mdspan[data-rich-text-format-boundary="true"]{background-color:#fcef45!important}
 .comment-header .buttons-holder .buttons-wrapper button:hover{background-color:#edf2f9}
-#md-comments-suggestions-parent{position:absolute;top:80px;right:0;transition:all 0.5s;z-index:99;height:100%;height:calc(100% - 100px);overflow:auto;width:345px;font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif}
+#md-comments-suggestions-parent{position:absolute;top:80px;right:0;transition:all 0.5s;z-index:9;height:100%;height:calc(100% - 100px);overflow:auto;width:345px;font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif}
 #md-comments-suggestions-parent div#md-span-comments{height:100%;overflow:auto;padding:10px 10px 10px 42px;overflow-x:hidden}
 div#md-suggestion-comments{height:100%;overflow:auto;padding:10px 10px 10px 42px;overflow-x:hidden}
 div#md-suggestion-comments::-webkit-scrollbar-track, #md-comments-suggestions-parent div#md-span-comments::-webkit-scrollbar-track{-webkit-box-shadow:inset 0 0 1px rgba(0, 0, 0, 0.3);border-radius:0;background-color:#fff;border:1px solid #4747474d}
